added package page

--- a/march-update/about/about-aleia/aleia-dev/index.html
+++ b/march-update/about/about-aleia/aleia-dev/index.html
@@ -105,11 +105,11 @@
                         <div class="goals">
                         <div class="spacer-a"></div>
                         <p class="flex-copy">
-                            When I'm not playing with CSS3 tricks I'm freelancing as a frontend developer and designer. I'm building <a href="http://workingtobeawesome.com" alt="">Working to be Awesome</a>, a directory of independent online courses. And I'm of course looking for an awesome team to join.
+                            When I'm not playing with CSS3 tricks I'm freelancing as a frontend developer and designer. I'm building <a href="http://workingtobeawesome.com" alt="working to be awesome" target="_blank">Working to be Awesome</a>, a directory of independent online courses. And I'm of course looking for an awesome team to join.
                         </p>
                         <div class="spacer-a"></div>
                         <figure class="figure-single">
-                            <a href="workingtobeawesome.com"><img src="../../../img/wtba.png"></a>
+                            <a href="workingtobeawesome.com" target="_blank"><img src="../../../img/wtba.png"></a>
                         </figure>
                     </div>
                     <div class="interested">
@@ -137,22 +137,22 @@
                     <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                     <ul class="social">
                         <li>
-                            <a href="https://twitter.com/msaleia">
+                            <a href="https://twitter.com/msaleia" target="_blank">
                                 <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/msaleia">
+                            <a href="https://github.com/msaleia" target="_blank">
                                 <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/in/aleiawalker">
+                            <a href="https://linkedin.com/in/aleiawalker" target="_blank">
                                 <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://behance.net/aleiawalker">
+                            <a href="https://behance.net/aleiawalker" target="_blank">
                                 <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                             </a>
                         </li>
