--- a/march-update/about/about-aleia/index.html
+++ b/march-update/about/about-aleia/index.html
@@ -92,7 +92,7 @@
 		        	And then I found web development...
 		        </p>
 		        <p class="bio-copy">
-		        	I revisted my graphic design design skills and translated them to UX and UI skills. I chose a text editor and then got to work finding my niche in web development. My sweet spot starts around UX and ends around the development of a responsive layout + JavaScript functionality. I share my journey online, mostly on <a href="https://twitter.com/msaleia">Twitter</a>, and have found an amazing tech community. I'm missing that in real life and can't wait to find a team as I continue to realize my dev dreams.
+		        	I revisted my graphic design design skills and translated them to UX and UI skills. I chose a text editor and then got to work finding my niche in web development. My sweet spot starts around UX and ends around the development of a responsive layout + JavaScript functionality. I share my journey online, mostly on <a href="https://twitter.com/msaleia" target="_blank">Twitter</a>, and have found an amazing tech community. I'm missing that in real life and can't wait to find a team as I continue to realize my dev dreams.
 		        </p>
 		    </div>
 	        <p class="future">
@@ -116,27 +116,27 @@
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
-                        <a href="https://twitter.com/msaleia">
+                        <a href="https://twitter.com/msaleia" target="_blank">
                             <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/msaleia">
+                        <a href="https://github.com/msaleia" target="_blank">
                             <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com/in/aleiawalker">
+                        <a href="https://linkedin.com/in/aleiawalker" target="_blank">
                             <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://behance.net/aleiawalker">
+                        <a href="https://behance.net/aleiawalker" target="_blank">
                             <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:aleia@aleiawalker.com">
+                        <a href="mailto:aleia@aleiawalker.com" target="_blank">
                             <i class="fa fa-envelope fa-lg" alt="email icon"></i>
                         </a>
                     </li>
