--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -109,7 +109,7 @@
                         </div> -->
                         <div class="content">
                             <figure>
-                                <a href="http://workingtobeawesome.com"><img src="../img/wtba-logo.svg"></a>
+                                <a href="http://workingtobeawesome.com" target="_blank"><img src="../img/wtba-logo.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
@@ -136,7 +136,7 @@
                         </div> -->
                         <div class="content">
                             <figure>
-                                <a href="examples/loud-vibes/"><img src="../img/loud-vibes.svg"></a>
+                                <a href="examples/loud-vibes/" target="_blank"><img src="../img/loud-vibes.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
@@ -167,7 +167,7 @@
                     </div>
                     <div class="portfolio-content">
                         <div class="content-title">
-                            <a href="examples/geolocation/">Are You Lost?</a>
+                            <a href="examples/geolocation/" target="_blank">Are You Lost?</a>
                         </div>
                         <div class="content">
                             <!-- <figure>
@@ -198,7 +198,7 @@
                     </div>
                     <div class="portfolio-content">
                         <div class="content-title">
-                            <a href="examples/flexbox/">Example Bio Page</a>
+                            <a href="examples/flexbox/" target="_blank">Example Bio Page</a>
                         </div>
                         <div class="content">
                             <!-- <figure>
@@ -229,7 +229,7 @@
                         </div> -->
                         <div class="content">
                             <figure>
-                                <a href="https://behance.net/aleiawalker"><img src="../img/aleia-logo-orig.svg"></a>
+                                <a href="https://behance.net/aleiawalker" target="_blank"><img src="../img/aleia-logo-orig.svg"></a>
                             </figure>
                             <div>
                                 <p class="content-description">
@@ -273,22 +273,22 @@
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
-                        <a href="https://twitter.com/msaleia">
+                        <a href="https://twitter.com/msaleia" target="_blank">
                             <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/msaleia">
+                        <a href="https://github.com/msaleia" target="_blank">
                             <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com/in/aleiawalker">
+                        <a href="https://linkedin.com/in/aleiawalker" target="_blank">
                             <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://behance.net/aleiawalker">
+                        <a href="https://behance.net/aleiawalker" target="_blank">
                             <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                         </a>
                     </li>
