--- a/march-update/process/index.html
+++ b/march-update/process/index.html
@@ -34,7 +34,7 @@
         <div class="wrapper">
             <header class="page-header gray-alt">
                 <figure class="logo">
-                    <a href="../index.html"><img src="../img/logo-dark.svg"/></a>
+                    <a href="../"><img src="../img/logo-dark.svg"/></a>
                 </figure>
                 <figure>
                     <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
@@ -140,22 +140,22 @@
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
                     <li>
-                        <a href="https://twitter.com/msaleia">
+                        <a href="https://twitter.com/msaleia" target="_blank">
                             <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/msaleia">
+                        <a href="https://github.com/msaleia" target="_blank">
                             <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com/in/aleiawalker">
+                        <a href="https://linkedin.com/in/aleiawalker" target="_blank">
                             <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://behance.net/aleiawalker">
+                        <a href="https://behance.net/aleiawalker" target="_blank">
                             <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                         </a>
                     </li>
