--- a/march-update/packages/index.html
+++ b/march-update/packages/index.html
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                     </article>
-                    <article class="card"> <!-- Top-1 Package -->
+                    <article class="card"> <!-- Second-Level Package -->
                         <div class="card-background">
                             <div class="card-title">
                                 <header class="card-title-copy">    
@@ -220,22 +220,22 @@
                     <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                     <ul class="social">
                         <li>
-                            <a href="https://twitter.com/msaleia">
+                            <a href="https://twitter.com/msaleia" target="_blank">
                                 <i class="fa fa-twitter fa-lg" alt="twitter icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/msaleia">
+                            <a href="https://github.com/msaleia" target="_blank">
                                 <i class="fa fa-github-alt fa-lg" alt="GitHub icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/in/aleiawalker">
+                            <a href="https://linkedin.com/in/aleiawalker" target="_blank">
                                 <i class="fa fa-linkedin fa-lg" alt="linkedin icon"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://behance.net/aleiawalker">
+                            <a href="https://behance.net/aleiawalker" target="_blank">
                                 <i class="fa fa-behance fa-lg" alt="Behance icon"></i>
                             </a>
                         </li>
