--- a/march-update/index.html
+++ b/march-update/index.html
@@ -55,8 +55,8 @@
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="packages/">
-                                Packages
+                            <a href="work-with-me/">
+                                Work with Me
                             </a>
                         </li>
                         <li class ="spacer"></li>
@@ -96,7 +96,7 @@
                     <div class="hire-me">
                         <p class="hire-copy">Looking to start a new project</p>
                             <button>
-                                <a href="packages/"><p>Hire Me</p></a>
+                                <a href="work-with-me/"><p>Hire Me</p></a>
                             </button>
                     </div>
                     <div class="hire-me">
