--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -64,8 +64,8 @@
                     </li>
                     <li class ="spacer"></li>
                     <li>
-                        <a href="../packages/">
-                            Packages
+                        <a href="../work-with-me/">
+                            Work with Me
                         </a>
                     </li>
                     <li class ="spacer"></li>
@@ -260,7 +260,7 @@
                             </figure> -->
                             <div>
                                 <p class="content-description">
-                                    Do you want to be here? Take a look at <a href="../packages/">these.</a>
+                                    Do you want to be here? Take a look at <a href="../work-with-me/">these.</a>
                                 </p>
                             </div>
                         </div>
