--- a/march-update/about/about-aleia/index.html
+++ b/march-update/about/about-aleia/index.html
@@ -49,8 +49,8 @@
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="../../packages/">
-                                Packages
+                            <a href="../../work-with-me/">
+                                Work with Me
                             </a>
                         </li>
                         <li class ="spacer"></li>
