--- a/march-update/work-with-me/index.html
+++ b/march-update/work-with-me/index.html
@@ -57,8 +57,8 @@
                                 </li>
                                 <li class ="spacer"></li>
                                 <li>
-                                    <a href="../packages/">
-                                        Packages
+                                    <a href="#">
+                                        Work with Me
                                     </a>
                                 </li>
                                 <li class ="spacer"></li>
