added optin to top of page

--- a/march-update/work-with-me/index.html
+++ b/march-update/work-with-me/index.html
@@ -63,7 +63,7 @@
                                 </li>
                                 <li class ="spacer"></li>
                                 <li>
-                                    <a href="#">
+                                    <a href="../portfolio">
                                         Portfolio
                                     </a>
                                 </li>
