--- a/march-update/work-with-me/index.html
+++ b/march-update/work-with-me/index.html
@@ -32,6 +32,29 @@
 
         <!-- Add your site or application content here -->
         <div class="wrapper" class="wwm-main-wrapper">
+        <section class="opt-in">
+
+            <!-- Begin MailChimp Signup Form -->
+                <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                <div id="mc_embed_signup">
+                    <header>
+                        <p>Aleia's Notes : From Side Hustle to Full-Time</p>
+                    </header>
+                    <form action="//aleiawalker.us9.list-manage.com/subscribe/post?u=c7bcb0e4741ed1cb885ced02b&amp;id=029bb42e6a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+<!--                             <label for="mce-EMAIL">Subscribe to our mailing list</label> -->
+                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true" >
+                                <input type="text" name="b_c7bcb0e4741ed1cb885ced02b_029bb42e6a" tabindex="-1" value="">
+                            </div>
+                            <div class="clear">
+                                <input type="submit" value="Click here to Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+        </section>
             <div class="work-with-me-wrapper">
                 <header class="page-header gray-alt">
                     <figure class="logo">
