updated side-hustler to side hustler and added new about page git push

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -101,7 +101,7 @@
                 <div class="hero-copy">
                     <p class="hero-intro"><span class="accent-word bright">Hi.</span> <span class="uppercase hairline">My name is</span></p>
                     <h1 class="uppercase">Aleia Walker</h1>
-                    <p class="hero-tagline hairline">frontend developer + instructor + <a href="https://barrebodyspirits.com" target="_blank">full-time side-hustler</a></p>
+                    <p class="hero-tagline hairline">frontend developer + instructor + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a></p>
                 </div>
             </div>
         </section>
