completed new homepage

--- a/march-update/about/new-index.html
+++ b/march-update/about/new-index.html
@@ -49,7 +49,7 @@
             </section>
         <header class="page-header light-alt">
             <figure class="logo">
-                <a href="../"><img src="../img/logo-dark.svg"/></a>
+                <a href="../"><img src="../img/logo.svg"/></a>
             </figure>
             <figure>
                 <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
@@ -97,7 +97,16 @@
                 </div>
             </section>
             <div class="menu-hide">
-            <main class="new-about">
+            <section class="hero">
+                <div class="hero-copy-wrapper">
+                    <div class="hero-copy">
+                        <p class="hero-intro"><span class="intro-hi">Hi.</span> <span class="intro-name">My name is</span></p>
+                        <h1 class="uppercase">Aleia Walker</h1>
+                        <p class="hero-tagline hairline">frontend developer + instructor + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a></p>
+                    </div>
+                </div>
+            </section>
+            <main class="about-copy">
                 <p>You’re a multi-passionate, creative entrepreneur. And maybe you’d call yourself a side hustler.</p>
 
                 <p>While you’re at your dayjob, you find yourself staring out the cubicle window, daydreaming about growing your business and creating something truly amazing that’s all your own.</p>
