--- a/march-update/index.html
+++ b/march-update/index.html
@@ -30,31 +30,16 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-    <div class="wrapper">
-        <section class="opt-in">
-
-        <!-- Begin MailChimp Signup Form -->
-            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-            <div id="mc_embed_signup">
-                <header>
-                    <p>Aleia's Notes : From Side Hustle to Full-Time</p>
-                </header>
-                <div id="mc_embed_signup_scroll">
-                    <button>
-                        <p><a href="http://eepurl.com/ci_tVf">Click here to Sign-Up</a></p>
-                    </button>
-                </div>
-            </div>
-        </section>
-        <header class="page-header">
-            <figure class="logo">
-                <img src="img/logo.svg"/>
-            </figure>
-            <figure>
-                <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
-            </figure>
-        </header>
-        <section id="menu-main" class="uppercase">
+        <div class="wrapper">
+            <header class="page-header">
+                <figure class="logo">
+                    <img src="img/logo.svg"/>
+                </figure>
+                <figure>
+                    <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
+                </figure>
+            </header>
+            <section id="menu-main" class="uppercase">
                 <div class="menu-wrapper">
                     <ul class="menu-active">
                         <li>
@@ -65,7 +50,7 @@
                         <li class ="spacer"></li>
                         <li>
                             <a href="about/">
-                                My Story
+                                About Me
                             </a>
                         </li>
                         <li class ="spacer"></li>
@@ -96,85 +81,90 @@
                 </div>
             </section>
             <div class="menu-hide">
-        <section class="hero">
-            <div class="hero-copy-wrapper">
-                <div class="hero-copy">
-                    <p class="hero-intro"><span class="accent-word bright">Hi.</span> <span class="uppercase hairline">My name is</span></p>
-                    <h1 class="uppercase">Aleia Walker</h1>
-                    <p class="hero-tagline hairline">frontend developer + instructor + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a></p>
-                </div>
-            </div>
-        </section>
-        <section class="main intro-body">
-            <div class="main-container">
-                <div class="hire-intro">
-                    <div class="hire-me">
-                        <p class="hire-copy">Looking to start a new project</p>
-                            <button>
-                                <a href="work-with-me/"><p>Hire Me</p></a>
-                            </button>
-                    </div>
-                    <div class="hire-me">
-                        <p class="hire-copy">Looking for a long-term designer and/or developer</p>
-                            <button>
-                                <a href="portfolio/">
-                                    <p>Hire Me</p>
-                                </a>
-                            </button>
-                    </div>
-                </div>
+                <section class="welcome">
+                    <aside class="welcome-photos">
+                        <div class="photo-row">
+                            <figure class="aleia-photo" id="welcome-img-1">
+                                <img src="img/aleia-1.jpg" alt="photo of Aleia">
+                            </figure>
+                            <figure class="aleia-photo">
+                                <img src="img/aleia-4.jpg" alt="photo of Aleia">
+                            </figure>
+                        </div>
+                        <div class="photo-row">
+                            <figure class="aleia-photo">
+                                <img src="img/aleia-5.jpg" alt="photo of Aleia">
+                            </figure>
+                            <figure class="aleia-photo">
+                                <img src="img/aleia-6.jpg" alt="photo of Aleia">
+                            </figure>
+                        </div>
+                    </aside>
+                    <aside class="welcome-info">
+                        <div class="welcome-info-wrapper">
+                            <p class="welcome-intro">
+                                <span class="intro-hi">Hi.</span> <span class="intro-name">My name is</span>
+                            </p>
+                            <h1 class="uppercase">Aleia Walker</h1>
+                            <p class="welcome-tagline">
+                                frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
+                            </p>
+                            <p>and I help other side hustlers make their mark on the web.</p>
+                        </div> <!-- welcome info wrapper -->
+                        <div class="opt-in">
+                            <!-- Begin MailChimp Signup Form -->
+                            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                            <div id="mc_embed_signup">
+                                <div id="mc_embed_signup_scroll">
+                                    <button>
+                                        <p><a href="http://eepurl.com/ci_tVf">Join Me!</a></p>
+                                    </button>
+                                </div>
+                            </div>
+                        </div> <!-- opt-in end -->        
+                    </aside>
+                </section>
+            </main>
 
-                <div class="amphersand">
-                    <p class="accent-word uppercase">or</p>
+            <footer>
+                <div class="footer-copy">
+                    <p class="footer-tag">Aleia elsewhere on the web</p>
+                    <ul class="social">
+                        <li>
+                            <a href="https://twitter.com/msaleia" target="_blank">
+                                <i class="fa fa-twitter fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/msaleia" target="_blank">
+                                <i class="fa fa-github-alt fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://linkedin.com/in/aleiawalker" target="_blank">
+                                <i class="fa fa-linkedin fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://behance.net/aleiawalker" target="_blank">
+                                <i class="fa fa-behance fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:aleia@aleiawalker.com">
+                                <i class="fa fa-envelope fa-lg"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://eepurl.com/ci_tVf">
+                                <i class="fa fa-rss fa-lg"></i>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-
-                <div class="links">
-                    <p>Read <a href="about/" target="_blank">'My Story'.</a></p>
-                    <p>Check out what <a href="portfolio/" target="_blank">I've worked on.</a></p>
-                    <p>Read <a href="/blog" target="_blank">the archives.</a></p>
-                    <p>Or <a href="mailto:aleia@aleiawalker.com?Subject=Love%20your%20site!%20Let's%20talk.%20" target="_blank">get in touch.</a></p>
-                </div>
-            </div>
-        </section>
-
-        <footer class="footer">
-            <div class="footer-copy">
-                <p class="footer-tag">Aleia elsewhere on the web</p>
-                <ul class="social">
-                    <li>
-                        <a href="https://twitter.com/msaleia" target="_blank">
-                            <i class="fa fa-twitter fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/msaleia" target="_blank">
-                            <i class="fa fa-github-alt fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://linkedin.com/in/aleiawalker" target="_blank">
-                            <i class="fa fa-linkedin fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://behance.net/aleiawalker" target="_blank">
-                            <i class="fa fa-behance fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:aleia@aleiawalker.com">
-                            <i class="fa fa-envelope fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://eepurl.com/ci_tVf">
-                            <i class="fa fa-rss fa-lg"></i>
-                        </a>
-                    </li>
-                </ul>
             </footer>
-            </div> <!-- menu hide -->
-        </div> <!-- wrapper div ended -->
+        </div> <!-- menu hide -->
+<!--     </div> wrapper div ended -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
